--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -86,6 +86,7 @@
 .catalog-item__price {
   margin-top: 18px;
   margin-bottom: 12px;
+  width: 184px;
   .font(15px, 24px);
   color: @color-black;
 }
@@ -161,12 +162,14 @@
 
   .catalog-item__price-wrapper {
     margin: 0;
+    margin-top: auto;
   }
 
   .catalog-item__price {
     margin: 15px 0;
     padding-top: 2px;
     padding-left: 5px;
+    width: 255px;
     .font(17px, 24px);
   }
 
@@ -223,6 +226,7 @@
 
   .catalog-item__price {
     padding-left: 0;
+    width: 235px;
   }
 
   .catalog-item__btn-add {
