--- a/source/less/blocks/form-order.less
+++ b/source/less/blocks/form-order.less
@@ -21,8 +21,8 @@
   &::after {
     content: "";
     position: absolute;
-    top: 7px;
-    width: 76%;
+    top: 8px;
+    width: 198px;
     height: 1px;
     background-color: @color-green;
   }
