--- a/source/less/blocks/phone.less
+++ b/source/less/blocks/phone.less
@@ -8,6 +8,7 @@
 
   &::after {
     left: 62px;
+    top: 11px;
   }
 }
 
@@ -38,7 +39,7 @@
 
 .phone__input {
   padding: 0;
-  padding-top: 22px;
+  padding-top: 20px;
   padding-bottom: 16px;
   width: 100%;
   .font(17px, 18px);
@@ -93,6 +94,7 @@
 
   .phone__icon {
     right: 76px;
+    bottom: 17px;
   }
 
   .phone__input {
