--- a/source/less/blocks/email.less
+++ b/source/less/blocks/email.less
@@ -3,15 +3,13 @@
   margin-bottom: 33px;
 }
 
-.email .form-order__legend::after {
-  width: 69%;
-}
-
 .email__title {
   margin-bottom: 6px;
 
   &::after {
     left: 81px;
+    top: 11px;
+    width: 179px;
   }
 }
 
@@ -37,7 +35,7 @@
 
 .email__input {
   padding: 0;
-  padding-top: 17px;
+  padding-top: 21px;
   padding-bottom: 15px;
   width: 100%;
   .font(17px, 18px);
@@ -90,12 +88,13 @@
   }
 
   .email__icon {
-    bottom: 7px;
+    bottom: 9px;
     right: 72px;
   }
 
   .email__input {
     padding-right: 60px;
+    padding-top: 17px;
     padding-left: 16px;
     width: 501px;
     .font(19px, 18px);
