--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -45,24 +45,11 @@
 }
 
 @media (max-width: @mobile-width-only) {
-  .main-nav--closed .site-list__item {
-    display: none;
-
-    &--active {
-      display: block;
-    }
-
-    &--active a {
-      padding-right: 70px;
-      padding-left: 70px;
-    }
-  }
-
-  .main-nav--closed .user-list__item {
+  .main-nav--closed .site-list,
+  .main-nav--closed .user-list {
     display: none;
   }
 
-  /*.main-nav--opened .main-nav__wrapper {*/
   .main-nav--opened .site-list,
   .main-nav--opened .user-list {
     position: static;
@@ -75,25 +62,17 @@
     display: none;
   }
 
-  /*.main-nav--nojs .main-nav__wrapper {*/
   .main-nav--nojs .site-list,
   .main-nav--nojs .user-list {
+    display: block;
     position: static;
     min-height: 0;
-  }
-
-  .main-nav--nojs .site-list__item {
-    display: block;
   }
 
   .main-nav--nojs .site-list__item--active a {
     padding-right: 21px;
     padding-left: 21px;
     text-align: left;
-  }
-
-  .main-nav--nojs .user-list__item {
-    display: block;
   }
 
   .main-nav--nojs .user-list__item--noactive {
