--- a/source/less/blocks/textarea.less
+++ b/source/less/blocks/textarea.less
@@ -6,12 +6,14 @@
   margin-bottom: 24px;
 
   &::after {
+    top: 11px;
     left: 62px;
   }
 }
 
 .textarea__field {
   margin: 0;
+  margin-top: 24px;
   padding: 14px 15px;
   width: 100%;
   min-height: 142px;
@@ -70,12 +72,13 @@
     display: flex;
     justify-content: flex-start;
     margin: 51px auto;
+    margin-top: 27px;
     padding: 0 50px;
   }
 
   .textarea__title {
     margin: 0;
-    padding-top: 17px;
+    padding-top: 40px;
   }
 
   .textarea__label {
