--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -3,14 +3,34 @@
 }
 
 .catalog-menu__item {
-  position: relative;
-
   width: 100%;
   min-height: 103px;
 
   .font(19px, 24px);
   text-align: left;
   color: @color-white;
+
+  & svg {
+    position: absolute;
+    opacity: 0.5;
+    fill: #149080;
+  }
+
+  &:hover,
+  &:focus {
+    margin-top: -5px;
+    padding-top: 5px;
+    min-height: 108px;
+  }
+
+  &:hover svg,
+  &:focus svg{
+    opacity: 0.7;
+  }
+
+  &:active .catalog-menu__link {
+    opacity: 0.3;
+  }
 
   &--decoration {
     background-color: @color-green;
@@ -23,18 +43,14 @@
 
   &--decoration:active {
     background-color: @color-green-hover;
-    opacity: 0.3;
   }
 
   &--decoration svg {
-    position: absolute;
     top: 23px;
     right: 36px;
 
     width: 40px;
     height: 62px;
-    opacity: 0.5;
-    fill: #149080;
   }
 
   &--toys {
@@ -48,22 +64,19 @@
 
   &--toys:active {
     background-color: @color-green-alternative-hover;
-    opacity: 0.3;
   }
 
   &--toys svg {
-    position: absolute;
     top: 21px;
     right: 27px;
 
     width: 60px;
     height: 60px;
-    opacity: 0.5;
-    fill: #149080;
   }
 }
 
 .catalog-menu__link {
+  position: relative;
   display: block;
   padding: 28px 30px;
   padding-top: 25px;
