--- a/source/less/blocks/type.less
+++ b/source/less/blocks/type.less
@@ -35,15 +35,15 @@
     border: 2px solid @color-text;
     background-color: @color-white;
   }
+}
 
-  &:hover::before,
-  &:focus::before {
-    border: 2px solid #63d1bb;
-  }
+.type__input-radio:hover+label::before,
+.type__input-radio:focus+label::before {
+  border: 2px solid #63d1bb;
+}
 
-  &:active::before {
-    border: 2px solid rgba(@color-text, 0.3);
-  }
+.type__input-radio:active+label::before {
+  border: 2px solid rgba(@color-text, 0.3);
 }
 
 .type__input-radio:disabled ~ .type__input-label::before,
