--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -8,6 +8,15 @@
   padding-bottom: 34px;
   width: 260px;
   border: 1px solid @color-grey;
+
+  &:hover,
+  &:focus {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+  }
+
+  &:active {
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+  }
 }
 
 .video__title {
